--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Welcome to 2<sup>nd</sup> DialDoc Workshop
+          <h2 class="animate__animated animate__fadeInDown">Welcome to 2<sup>nd</sup> Workshop of Deep Multimodal Learning for Information Retrieval 2023 (MMIR23)
           </h2>
           <p class="orange-text">May 26, 2022 at Dublin</p>
           <p class="animate__animated fanimate__adeInUp">
-              DialDoc Workshop focuses on building and scaling up document-grounded dialogue and conversational question answering systems for various domains.
+              MMIR23 Workshop focuses on building and scaling up xxxxxx.
          </p>
          <p class="text-white">Join our <a href="https://groups.google.com/g/dialdoc">Google Group</a> for important updates.</p>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
