--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>DialDoc-ACL2022| HOME</title>
+  <title>MMIR23@ACM-2023| HOME</title>
   <meta content="conference workshop" name="description">
   <meta content="" name="keywords">
 
@@ -53,9 +53,9 @@
           
         
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1><a href="https://www.2022.aclweb.org/" target="blank_"><img src="assets/img/logo.png" alt="DialDoc@ACL2022"></a></h1> 
+        <h1><a href="https://www.acmmm2023.org/" target="blank_"><img src="assets/img/logo.png" alt="MMIR23@ACM-2023"></a></h1> 
         <p style="margin : 0; padding-top:0; padding-left: 50px; padding-bottom:0;  line-height:0; font-size: 12px; text-align: center;" class="green-text">
-        <b>May 26, 2022 | Dublin</b>
+        <b>November 3, 2022 | Ottawa, Canada</b>
       </p> 
       </div>
 
