--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Welcome to 2<sup>nd</sup> Workshop of Deep Multimodal Learning for Information Retrieval 2023 (MMIR23)
+          <h2 class="animate__animated animate__fadeInDown">Welcome to the MMIR23 Workshop </br> 2023 Deep Multimodal Learning for Information Retrieval
           </h2>
           <p class="orange-text">May 26, 2022 at Dublin</p>
           <p class="animate__animated fanimate__adeInUp">
@@ -111,13 +111,13 @@
       </div>
 
       <!-- Slide 3 -->
-      <div class="carousel-item">
+<!--       <div class="carousel-item">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Shared Task</h2>
           <p class="animate__animated animate__fadeInUp">We propose a shared task to invite different research perspectives towards building goal-oriented document-grounded dialogue system on open-book multi-domain documents.</p>
           <a href="#shared" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
-      </div>
+      </div> -->
 
       <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
