--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </h2>
           <p class="orange-text">May 26, 2022 at Dublin</p>
           <p class="animate__animated fanimate__adeInUp">
-              MMIR23 Workshop focuses on building and scaling up xxxxxx.
+              Information retrieval (IR) is a fundamental technique that aims to acquire information from a collection of documents, web pages, or other sources. While traditional text-based IR has achieved great success, the under-utilization of varied data sources in different modalities (i.e., text, images, audio, and video) would hinder IR techniques from giving its full advancement and thus limits the applications in the real world. 
          </p>
          <p class="text-white">Join our <a href="https://groups.google.com/g/dialdoc">Google Group</a> for important updates.</p>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
@@ -105,7 +105,10 @@
       <div class="carousel-item">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Themes</h2>
-          <p class="animate__animated animate__fadeInUp">Our special theme aim to support building scalable document-grounded conversational systems, especially for low-resource domains including applications in low-resource languages or unforeseen emerging domains (e.g., social well-being during pandemic).</p>
+          <p class="animate__animated animate__fadeInUp">
+		  Within recent years, the rapid development of deep multimodal learning paves the way for advancing IR with multimodality. 
+		  Benefiting from a variety of data types and modalities, some latest prevailing techniques are invented to show great facilitation in multimodal and IR learning, such as CLIP, Chat-GPT, GPT4, etc. 
+		</p>
           <a href="#cta" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
       </div>
@@ -114,7 +117,10 @@
 <!--       <div class="carousel-item">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Shared Task</h2>
-          <p class="animate__animated animate__fadeInUp">We propose a shared task to invite different research perspectives towards building goal-oriented document-grounded dialogue system on open-book multi-domain documents.</p>
+          <p class="animate__animated animate__fadeInUp">
+In the context of IR, deep multimodal learning has shown the prominent potential to improve the performance of retrieval systems, by enabling them to better understand and process the diverse types of data that they encounter. Given the great potential shown by multimodal-empowered IR, there can be still unsolved challenges and open questions in the related directions. 
+		  With this workshop, we target providing a platform for discussion about multimodal IR among scholars, practitioners, and other interested parties.
+</p>
           <a href="#shared" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
       </div> -->
