--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@ In the context of IR, deep multimodal learning has shown the prominent potential
 
         <div class="row content" data-aos="fade-up">
           <div class="col-lg-6">
-            <p>Welcome to 2<sup>nd</sup> DialDoc Workshop co-located with <b><a class="green-text" href="https://www.2022.aclweb.org/">ACL 2022</a></b>!</p>
+            <p>Welcome to 2<sup>nd</sup> MMIR Workshop co-located with <b><a class="green-text" href="https://www.2022.aclweb.org/">ACL 2022</a></b>!</p>
             <p>
-                 DialDoc Workshop focuses on document-grounded dialogue and conversational question answering. There is a vast amount of document content created every day by human writers to communicate with human readers for sharing knowledge, ranging from encyclopedias to social benefits. Making the document content accessible to users via conversational systems and scaling it to various domains could be a meaningful yet challenging task. There are significant individual research threads that show promise in handling heterogeous knowledge embedded in documents for building conversational systems, including (1) unstructured content, such as text passages; (2) semi-structured content, such as tables or lists; (3) multi-modal content, such as images and videos along with text descriptions, and so on. The purpose of this workshop is to invite researchers and practitioners to bring their individual perspectives on the subject of document-grounded dialogue and conversational question answering to advance the field in a joint effort. 
+                 MMIR Workshop focuses on document-grounded dialogue and conversational question answering. There is a vast amount of document content created every day by human writers to communicate with human readers for sharing knowledge, ranging from encyclopedias to social benefits. Making the document content accessible to users via conversational systems and scaling it to various domains could be a meaningful yet challenging task. There are significant individual research threads that show promise in handling heterogeous knowledge embedded in documents for building conversational systems, including (1) unstructured content, such as text passages; (2) semi-structured content, such as tables or lists; (3) multi-modal content, such as images and videos along with text descriptions, and so on. The purpose of this workshop is to invite researchers and practitioners to bring their individual perspectives on the subject of document-grounded dialogue and conversational question answering to advance the field in a joint effort. 
             </p>
             
           </div>
@@ -813,67 +813,14 @@ Carl Strathearn, Dimitra Gkatzia
   
           <div class="row">
               <ul class="no-bullets">
-                  <li>Amanda Buddemeyer (University of Pittsburgh)</li>
-                  <li>Asli Celikyilmaz (Meta AI Research)</li>
-                  <li>Bowen Yu (Chinese Academy of Sciences)</li>
-                  <!-- <li>Byeongchang Kim (Seoul National University)</li> -->
-                  <li>Chen Henry Wu (Carnegie Mellon University)</li>
-                  <li>Chulaka Gunasekara (IBM Research AI)</li>
-                  <li>Chun Gan (JD Research)</li>
-                  <li>Cunxiang Wang (Westlake University)</li>
-                  <li>Danish Contractor (IBM Research)</li>
-                  <li>Dian Yu (Tencent)</li>
-                  <li>Diane Litman (University of Pittsburgh)</li>
-                  <li>Ehud Reiter (University of Aberdeen)</li>
-                  <li>Elizabeth Clark (University of Washington)</li>
-                  <li>Fanghua Ye (University College London)</li>
-                  <li>Tao Feng (Monash University)</li>
-                  <li>Guanyi Chen (Utrecht University)</li>
-                  <li>Hanjie Chen (University of Virginia)</li>
-                  <li>Hao Zhou (Tencent)</li>
-                  <li>Haotian Cui (Toronto University)</li>
-                  <li>Haochen Liu (Michigan State University)</li>
-                  <li>Houyu Zhang (Amazon)</li>
-                  <li>Ioannis Konstas (Heriot-Watt University)</li>
-                  <li>Jingjing Xu (Peking University)</li>
-                  <li>Jia-Chen Gu (USTC)</li>
-                  <li>Jinfeng Xiao (UIUC)</li>
-                  <li>Jian Wang (The Hong Kong Polytechnic University)</li>
-                  <li>Jingyang Li (Alibaba DAMO Academy)</li>
-                  <li>Jiwei Li (SHANNON.AI)</li>
-                  <li>Jun Xu (Baidu)</li>
-                  <li>Kai Song (ByteDance)</li>
-                  <li>Ke Shi (Tencent)</li>
-                  <li>Kun Qian (Columbia University)</li>
-                  <li>Kaixuan Zhang (Northwestern University)</li>
-                  <li>Libo Qin (MLNLP)</li>
-                  <li>Michael Johnston (Interactions)</li>
-                  <li>Meng Qu (MILA)</li>
-                  <li>Minjoon Seo (KAIST)</li>
-                  <li>Pei Ke (Tsinghua University)</li>
-                  <li>Peng Qi (Stanford University)</li>
-                  <li>Ravneet Singh (University of Pittsburgh)</li>
-                  <li>Ryuichi Takanobu (Tsinghua University)</li>
-                  <li>Rongxing Zhu (The University of Melbourne)</li>
-                  <li>Seokhwan Kim (Amazon Alexa AI)</li>
-                  <li>Shehzaad Dhuliawala (Microsoft Research Montreal)</li>
-                  <li>Srinivas Bangalore (Interactions)</li>
-                  <li>Zejiang Shen (AllenAI)</li>
-                  <li>Vaibhav Adlakha (MCGill and MILA)</li>
-                  <li>Wanjun Zhong (MSRA)</li>
-                  <li>Xi Chen (Tencent)</li>
-                  <li>Yifan Gao (The Chinese University of Hong Kong)</li>
-                  <li>Yekun Chai (Baidu)</li>
-                  <li>Yinhe Zheng (Alibaba DAMO Academy)</li>
-                  <li>Yiwei Jiang (Ghent University)</li>
-                  <li>Yajing Sun (Chinese Academy of Sciences)</li>
-                  <li>Yunqi Qiu (Chinese Academy of Sciences)</li>
-                  <li>Yosi Mass (IBM Research)</li>
-                  <li>Yutao Zhu (University of Montreal)</li>
-                  <li>Zheng Zhang (Tsinghua University)</li>
-                  <li>Zhenyu Zhang (Chinese Academy of Sciences)</li>
-                  <li>Zhenzhong Lan (Westlake University)</li>
-                  <li>Zhixing Tian (JD)</li>
+    [1] Bo Han (Hong Kong Baptist University, HK)
+    [2] Xiang Wang (USTC, China)
+    [3] Kevin Lin (Microsoft Azure AI, USA)
+    [4] Giorgos Tolias (CTU, Czech)
+    [5] \href{https://personal.ntu.edu.sg/hanwangzhang/}{Hanwang Zhang} (NTU, Singapore) 
+    [6] Efstratios Gavves (UvA, Netherlands)
+    [7] Xiatian Zhu (University of Surrey, UK)
+    [8] Anthony Dick (The University of Adelaide, AU)
               </ul>
           </div>
   
