--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Welcome to the MMIR23 Workshop </br> 2023 Deep Multimodal Learning for Information Retrieval
           </h2>
-          <p class="orange-text">May 26, 2022 at Dublin</p>
+          <p class="orange-text">October 29 - November 3, 2023 at Ottawa, Ontario, Canada</p>
           <p class="animate__animated fanimate__adeInUp">
               Information retrieval (IR) is a fundamental technique that aims to acquire information from a collection of documents, web pages, or other sources. While traditional text-based IR has achieved great success, the under-utilization of varied data sources in different modalities (i.e., text, images, audio, and video) would hinder IR techniques from giving its full advancement and thus limits the applications in the real world. 
          </p>
