--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MMIR23@ACM-2023| HOME</title>
+  <title>MMIR23@ACM-MM2023| HOME</title>
   <meta content="conference workshop" name="description">
   <meta content="" name="keywords">
 
@@ -804,14 +804,14 @@ Carl Strathearn, Dimitra Gkatzia
   
           <div class="row">
               <ul class="no-bullets">
-    [1] Bo Han (Hong Kong Baptist University, HK)
-    [2] Xiang Wang (USTC, China)
-    [3] Kevin Lin (Microsoft Azure AI, USA)
-    [4] Giorgos Tolias (CTU, Czech)
-    [5] \href{https://personal.ntu.edu.sg/hanwangzhang/}{Hanwang Zhang} (NTU, Singapore) 
-    [6] Efstratios Gavves (UvA, Netherlands)
-    [7] Xiatian Zhu (University of Surrey, UK)
-    [8] Anthony Dick (The University of Adelaide, AU)
+    [1] Bo Han (Hong Kong Baptist University, HK)  
+    [2] Xiang Wang (USTC, China)  
+    [3] Kevin Lin (Microsoft Azure AI, USA)  
+    [4] Giorgos Tolias (CTU, Czech)  
+    [5] \href{https://personal.ntu.edu.sg/hanwangzhang/}{Hanwang Zhang} (NTU, Singapore)   
+    [6] Efstratios Gavves (UvA, Netherlands)  
+    [7] Xiatian Zhu (University of Surrey, UK)  
+    [8] Anthony Dick (The University of Adelaide, AU)  
               </ul>
           </div>
   
@@ -846,8 +846,8 @@ Carl Strathearn, Dimitra Gkatzia
             <h2>Contact us</h2>
         </div>
         <div>
-          <h5>Join and post at our <a href="https://groups.google.com/g/mmir">Google Group</a>!</h5>
-          <h5>Email the organziers at <a href="mailto:mmir2023@googlegroups.com">mmir2023@googlegroups.com</a> .</h5>
+          <h5>Join and post at our <a href="https://groups.google.com/g/mmir23acm-mm23">Google Group</a>!</h5>
+          <h5>Email the organziers at <a href="mailto:mmir23@googlegroups.com">mmir23@googlegroups.com</a> .</h5>
             
         </div>
             
