--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <p class="animate__animated fanimate__adeInUp">
               Information retrieval (IR) is a fundamental technique that aims to acquire information from a collection of documents, web pages, or other sources. While traditional text-based IR has achieved great success, the under-utilization of varied data sources in different modalities (i.e., text, images, audio, and video) would hinder IR techniques from giving its full advancement and thus limits the applications in the real world. 
          </p>
-         <p class="text-white">Join our <a href="https://groups.google.com/g/mmir2023">Google Group</a> for important updates.</p>
+         <p class="text-white">Join our <a href="https://groups.google.com/g/mmir23acm-mm23">Google Group</a> for important updates.</p>
           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
       </div>
