--- a/index.html
+++ b/index.html
@@ -348,30 +348,15 @@ Carl Strathearn, Dimitra Gkatzia
         <br>
         <h4>Important Dates</h4>
         <ul>
-          <li><b class="orange-text">For regular workshop paper submissions (regular/non-archival long/short tracks)</b>
+          <li><b class="orange-text">For regular workshop paper submissions</b>
             <ul>
-              <li>Paper Due Date: <strike>February 28, 2023 (AoE)</strike> &#x2192; <b>March 7, 2022 (AoE)</b></li>
-              <li>Notification of Acceptance: <b>March 26, 2023</b></li>
+              <li>Paper Submission: <b>July 16, 2023(AoE)</b></li>
+              <li>Notification of Acceptance: <b>July 30, 2023</b></li>
+	      <li>Camera-ready Submission: <b>August 6, 2023</b></li>
+	      <li>Workshop dates: <b>October 28, 2023 - November 3, 2023</b></li>
             </ul>
           </li>
-          <li><b class="orange-text">For paper submissions with <a href="https://aclrollingreview.org/">ARR</a> reviews</b>
-            <ul>
-              <li>Paper Due Date: <strike>February 28, 2023 (AoE)</strike> &#x2192; <b>March 24, 2022 (AoE)</b></li>
-              <li>Notification of Acceptance: <b>March 26, 2023</b></li>
-            </ul>
-          </li>
-          <li><b class="orange-text">For technical paper submissions (Shared Task track)</b>
-            <ul>
-              <li>Paper Due Date: <b>March 27, 2023 (AoE)</b></li>
-              <li>Notification of Acceptance: <b>April 3, 2023</b></li>
-            </ul>
-          </li>
-          <li> <b class="orange-text">For all</b>
-            <ul>
-            <li>Camera-ready Paper Due Date: <b>April 10, 2023 (AoE)</b></li>
-            <li>Workshop Date: <b>May 26, 2023</b></li>
-            </ul>
-          </li>
+
           
         </ul>
 
