--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- Uncomment below if you prefer to use an image logo -->
         <h1 style="margin-left:115px"><a href="https://www.acmmm2023.org/" target="blank_"><img src="assets/img/sigmmlogo.gif" alt="MMIR23@ACM-2023"></a></h1> 
         <p style="margin : 0; padding-top:0; padding-left: 50px; padding-bottom:0;  line-height:0; font-size: 12px; text-align: center;" class="green-text">
-        <b>November 3, 2022 | Ottawa, Canada</b>
+        <b>October 29, 2022 | Ottawa, Canada</b>
       </p> 
       </div>
 
@@ -90,19 +90,19 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Welcome to the MMIR23 Workshop </br> 2023 Deep Multimodal Learning for Information Retrieval
+          <h2 class="animate__animated animate__fadeInDown">Welcome to 1<sup>st</sup> MMIR 2023 Workshop </br> Deep Multimodal Learning for Information Retrieval
           </h2>
           <p class="orange-text">October 29 - November 3, 2023 at Ottawa, Ontario, Canada</p>
           <p class="animate__animated fanimate__adeInUp">
-              Information retrieval (IR) is a fundamental technique that aims to acquire information from a collection of documents, web pages, or other sources. While traditional text-based IR has achieved great success, the under-utilization of varied data sources in different modalities (i.e., text, images, audio, and video) would hinder IR techniques from giving its full advancement and thus limits the applications in the real world. 
+              Information retrieval (IR) is a fundamental technique aiming to acquire information from a collection of documents, web pages, or other sources. While traditional text-based IR has achieved great success, the under-utilization of varied data sources in different modalities (i.e., text, images, audio, and video) would hinder IR techniques from giving its full advancement and thus limits the applications in the real world. 
          </p>
          <p class="text-white">Join our <a href="https://groups.google.com/g/mmir23acm-mm23">Google Group</a> for important updates.</p>
-          <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+<!--           <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a> -->
         </div>
       </div>
 
       <!-- Slide 2 -->
-      <div class="carousel-item">
+<!--       <div class="carousel-item">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">Themes</h2>
           <p class="animate__animated animate__fadeInUp">
@@ -111,7 +111,7 @@
 		</p>
           <a href="#cta" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
         </div>
-      </div>
+      </div> -->
 
       <!-- Slide 3 -->
 <!--       <div class="carousel-item">
@@ -125,13 +125,13 @@ In the context of IR, deep multimodal learning has shown the prominent potential
         </div>
       </div> -->
 
-      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
+<!--       <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
-      </a>
+      </a> -->
 
-      <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
+<!--       <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
-      </a>
+      </a> -->
 
     </div>
 
@@ -166,7 +166,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
         <div class="row content" data-aos="fade-up">
           <div class="col-lg-6">
             <p>Welcome to 1<sup>st</sup> MMIR Workshop co-located with <b><a class="green-text" href="https://www.acmmm2023.org/">ACM Multimedia 2023</a></b>!</p>
-            <p>
+            <p  style="text-align:justify">
                 Information retrieval (IR) is a fundamental technique that aims to acquire information from a collection of documents, web pages, or other sources. While traditional text-based IR has achieved great success, the under-utilization of varied data sources in different modalities (i.e., text, images, audio, and video) would hinder IR techniques from giving its full advancement and thus limits the applications in the real world. Within recent years, the rapid devel- opment of deep multimodal learning paves the way for advancing IR with multimodality. Benefiting from a variety of data types and modalities, some latest prevailing techniques are invented to show great facilitation in multimodal and IR learning, such as CLIP, Chat- GPT, GPT4, etc. In the context of IR, deep multimodal learning has shown the prominent potential to improve the performance of retrieval systems, by enabling them to better understand and process the diverse types of data that they encounter. Given the great potential shown by multimodal-empowered IR, there can be still unsolved challenges and open questions in the related di- rections. With this workshop, we target providing a platform for discussion about multimodal IR among scholars, practitioners, and other interested parties.
             </p>
             
@@ -707,7 +707,7 @@ Carl Strathearn, Dimitra Gkatzia
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://jiwei0523.github.io/images/weiji.JPG" class="img-fluid" alt="">
+                <img src="https://github.com/VRU-NExT/MMIR23/blob/main/assets/img/organizers/weiji.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4><a href="https://jiwei0523.github.io">Wei Ji</a></h4>
@@ -723,7 +723,7 @@ Carl Strathearn, Dimitra Gkatzia
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://weiyinwei.github.io/images/Digital%20photo_Yinwei.jpg" class="img-fluid" alt="">
+                <img src="https://github.com/VRU-NExT/MMIR23/blob/main/assets/img/organizers/yinwei.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4><a href="https://weiyinwei.github.io">Yinwei Wei</a></h4>
@@ -735,7 +735,7 @@ Carl Strathearn, Dimitra Gkatzia
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://zdzheng.xyz/images/profile.webp" class="img-fluid" alt="">
+                <img src="https://github.com/VRU-NExT/MMIR23/blob/main/assets/img/organizers/zhedong.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4><a href="http://zdzheng.xyz">Zhedong Zheng</a></h4>
@@ -747,7 +747,7 @@ Carl Strathearn, Dimitra Gkatzia
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://scofield7419.github.io/profile.jpg" class="img-fluid" alt="">
+                <img src="https://github.com/VRU-NExT/MMIR23/blob/main/assets/img/organizers/feihao.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4><a href="https://scofield7419.github.io">Hao Fei</a></h4>
@@ -759,10 +759,10 @@ Carl Strathearn, Dimitra Gkatzia
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://static.wixstatic.com/media/be90e0_29311d9f244a4e16a9e253f2c17283f0~mv2.png/v1/crop/x_97,y_40,w_291,h_467/fill/w_407,h_654,al_c,lg_1,q_85,enc_auto/chuats_2_edited.png" class="img-fluid" alt="">
+                <img src="https://github.com/VRU-NExT/MMIR23/blob/main/assets/img/organizers/chuats.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4><a href="http://ellenmellon.github.io/">Tat-seng Chua</a></h4>
+                <h4><a href="https://www.chuatatseng.com/">Tat-seng Chua</a></h4>
                 <span>National University of Singapore</span>
               </div>
             </div>
