--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@ Carl Strathearn, Dimitra Gkatzia
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://github.com/VRU-NExT/MMIR23/blob/main/assets/img/organizers/weiji.jpg" class="img-fluid" alt="">
+                <img src="assets/img/organizers/weiji.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4><a href="https://jiwei0523.github.io">Wei Ji</a></h4>
@@ -723,7 +723,7 @@ Carl Strathearn, Dimitra Gkatzia
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://github.com/VRU-NExT/MMIR23/blob/main/assets/img/organizers/yinwei.jpg" class="img-fluid" alt="">
+                <img src="assets/img/organizers/yinwei.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4><a href="https://weiyinwei.github.io">Yinwei Wei</a></h4>
@@ -735,7 +735,7 @@ Carl Strathearn, Dimitra Gkatzia
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://github.com/VRU-NExT/MMIR23/blob/main/assets/img/organizers/zhedong.jpg" class="img-fluid" alt="">
+                <img src="assets/img/organizers/zhedong.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4><a href="http://zdzheng.xyz">Zhedong Zheng</a></h4>
@@ -747,7 +747,7 @@ Carl Strathearn, Dimitra Gkatzia
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://github.com/VRU-NExT/MMIR23/blob/main/assets/img/organizers/feihao.jpg" class="img-fluid" alt="">
+                <img src="assets/img/organizers/feihao.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4><a href="https://scofield7419.github.io">Hao Fei</a></h4>
@@ -759,7 +759,7 @@ Carl Strathearn, Dimitra Gkatzia
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="https://github.com/VRU-NExT/MMIR23/blob/main/assets/img/organizers/chuats.jpg" class="img-fluid" alt="">
+                <img src="assets/img/organizers/chuats.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4><a href="https://www.chuatatseng.com/">Tat-seng Chua</a></h4>
