--- a/index.html
+++ b/index.html
@@ -826,8 +826,14 @@ Carl Strathearn, Dimitra Gkatzia
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
-            <h2>Contact us</h2>
+            <h2>Contact</h2>
         </div>
+	      
+      <div class="section-title" data-aos="zoom-out">
+            <!-- <h2>Organization</h2> -->
+            <p>Contact us</p>
+          </div>
+	      
         <div>
           <h5>Join and post at our <a href="https://groups.google.com/g/mmir23acm-mm23">Google Group</a>!</h5>
           <h5>Email the organziers at <a href="mailto:mmir23@googlegroups.com">mmir23@googlegroups.com</a> .</h5>
