--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           
         
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 style="margin-left:115px"><a href="https://www.acmmm2023.org/" target="blank_"><img src="assets/img/sigmmlogo.gif" alt="MMIR23@ACM-2023"></a></h1> 
+        <h1 style="margin-left:115px"><a href="#" target="blank_"><img src="assets/img/sigmmlogo.gif" alt="MMIR23@ACM-2023"></a></h1> 
         <p style="margin : 0; padding-top:0; padding-left: 50px; padding-bottom:0;  line-height:0; font-size: 12px; text-align: center;" class="green-text">
         <b>October 29, 2022 | Ottawa, Canada</b>
       </p> 
@@ -90,7 +90,9 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Welcome to 1<sup>st</sup> MMIR 2023 Workshop </br> Deep Multimodal Learning for Information Retrieval
+          <h2 class="animate__animated animate__fadeInDown">
+		  Welcome to 2023 Workshop of 1<sup>st</sup> MMIR <img src="favicon.png" height="60" style="margin-right:20px">
+		  </br> Deep Multimodal Learning for Information Retrieval
           </h2>
           <p class="orange-text">October 29 - November 3, 2023 at Ottawa, Ontario, Canada</p>
           <p class="animate__animated fanimate__adeInUp">
