--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <h2 class="animate__animated animate__fadeInDown">
-		  Welcome to 2023 Workshop of 1<sup>st</sup> MMIR <img src="favicon.png" height="60" style="margin-right:20px">
+		  Welcome to 2023 Workshop of 1<sup>st</sup> MMIR <img src="assets/img/favicon.png" height="60" style="margin-right:20px">
 		  </br> Deep Multimodal Learning for Information Retrieval
           </h2>
           <p class="orange-text">October 29 - November 3, 2023 at Ottawa, Ontario, Canada</p>
