--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MMIR23@ACM-MM2023| HOME</title>
+  <title>MMIR23@ACM-MM2023</title>
   <meta content="conference workshop" name="description">
   <meta content="" name="keywords">
 
