--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           
         
         <!-- Uncomment below if you prefer to use an image logo -->
-        <h1 style="margin-left:115px"><a href="#" target="blank_"><img src="assets/img/sigmmlogo.gif" alt="MMIR23@ACM-2023"></a></h1> 
+        <h1 style="margin-left:115px"><a href="https://videorelation.nextcenter.org/MMIR23" target="blank_"><img src="assets/img/sigmmlogo.gif" alt="MMIR23@ACM-2023"></a></h1> 
         <p style="margin : 0; padding-top:0; padding-left: 50px; padding-bottom:0;  line-height:0; font-size: 12px; text-align: center;" class="green-text">
         <b>October 29, 2022 | Ottawa, Canada</b>
       </p> 
