--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@ Carl Strathearn, Dimitra Gkatzia
                 <img src="assets/img/organizers/feihao.jpg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4><a href="https://scofield7419.github.io">Hao Fei</a></h4>
+                <h4><a href="https://haofei.vip">Hao Fei</a></h4>
                 <span>National University of Singapore</span>
               </div>
             </div>
