--- a/index.html
+++ b/index.html
@@ -201,16 +201,11 @@ In the context of IR, deep multimodal learning has shown the prominent potential
               <i>Topics of interests include but not limited to:</i>
             </p>
             <ul>
-                <li><i class="ri-check-double-line"></i> document-grounded dialogue and conversational machine reading, such as <a href="https://github.com/festvox/datasets-CMU_DoG" target="_blank" class="text-secondary">CMUDoG</a>, <a href="https://dataset.org/dream/" target="_blank" class="text-secondary">DREAM</a>, <a href="https://sharc-data.github.io" target="_blank" class="text-secondary">ShARC</a> and <a href="" target="_blank" class="text-secondary">Doc2Dial</a>;</li>
-                <li><i class="ri-check-double-line"></i> open domain dialogue and conversational QA, such as <a href="https://github.com/prdwb/orconvqa-release" target="_blank" class="text-secondary">ORConvQA</a>, <a href="https://mcgill-nlp.github.io/topiocqa/" target="_blank" class="text-secondary">TopiOCQA</a>, <a href="https://github.com/MeiqiGuo/AKBC2021-Abg-CoQA" target="_blank" class="text-secondary">Abg-CoQA</a>, <a href="https://github.com/apple/ml-qrecc" target="_blank" class="text-secondary">QReCC</a> and <a href="http://doc2dial.github.io/multidoc2dial/" target="_blank" class="text-secondary">MultiDoc2Dial</a>; </li>
-                <li><i class="ri-check-double-line"></i> conversational search among domain documents, such as <a href="https://guzpenha.github.io/MANtIS/" target="_blank" class="text-secondary">MANtIS</a> </li>
-                <li><i class="ri-check-double-line"></i> parsing semi-structured document content for dialogue and conversational QA, table reading, such as <a href="https://hybridqa.github.io" target="_blank" class="text-secondary">HybridQA</a> and <a href="https://nextplusplus.github.io/TAT-QA/" target="_blank" class="text-secondary">TAT-QA</a>;</li>
-                <li><i class="ri-check-double-line"></i> summarization for dialogue, query-based summarization, such as <a href="https://github.com/google-research-datasets/aquamuse" target="_blank" class="text-secondary">AQUAMUSE</a>;
-                </li>
-                <li><i class="ri-check-double-line"></i> knowledge-grounded dialogue generation; </li>
-                <li><i class="ri-check-double-line"></i> evaluations for document-grounded dialogue; </li>
-                <li><i class="ri-check-double-line"></i> interpretability and faithfulness in dialogue modeling; </li>
-                <li><i class="ri-check-double-line"></i> knowledge-grounded multimodal dialogue and question answering. </li>
+                <li><i class="ri-check-double-line"></i> Image-text Multimodal Learning and Retrieval</li>
+                <li><i class="ri-check-double-line"></i> Video-text Understanding and Retrieval </li>
+                <li><i class="ri-check-double-line"></i> Dialogue Multimodal Retreival </li>
+                <li><i class="ri-check-double-line"></i> Reliable Multimodal Retrieval</li>
+                <li><i class="ri-check-double-line"></i> Multimedia Retrieval Applications</li>
               </ul>
             <!-- <a href="#" class="btn-learn-more">Learn More</a> -->
           </div>
