--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@ In the context of IR, deep multimodal learning has shown the prominent potential
               <i>Topics of interests include but not limited to:</i>
             </p>
             <ul>
-                <li><i class="ri-check-double-line"></i> Image-text Multimodal Learning and Retrieval</li>
+                <li><i class="ri-check-double-line"></i> Image-text Multimodal Learning and Retrieval;</li>
+		    <li>Vision-language Alignment Analysis</li>
+		    <li>Multimodal Fusion and Embeddings</li>
                 <li><i class="ri-check-double-line"></i> Video-text Understanding and Retrieval </li>
                 <li><i class="ri-check-double-line"></i> Dialogue Multimodal Retreival </li>
                 <li><i class="ri-check-double-line"></i> Reliable Multimodal Retrieval</li>
