--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ In the context of IR, deep multimodal learning has shown the prominent potential
             </p>
             <ul>
                 <li><i class="ri-check-double-line"></i> Image-text Multimodal Learning and Retrieval;</li>
-		    <li><i class="fas fa-check"></i>Vision-language Alignment Analysis</li>
-		    <li><i class="fas fa-check"></i>Multimodal Fusion and Embeddings</li>
+		    <li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Vision-language Alignment Analysis</li>
+		    <li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Multimodal Fusion and Embeddings</li>
                 <li><i class="ri-check-double-line"></i> Video-text Understanding and Retrieval </li>
                 <li><i class="ri-check-double-line"></i> Dialogue Multimodal Retreival </li>
                 <li><i class="ri-check-double-line"></i> Reliable Multimodal Retrieval</li>
