--- a/index.html
+++ b/index.html
@@ -201,13 +201,40 @@ In the context of IR, deep multimodal learning has shown the prominent potential
               <i>Topics of interests include but not limited to:</i>
             </p>
             <ul>
-                <li><i class="ri-check-double-line"></i> Image-text Multimodal Learning and Retrieval;</li>
-		    <li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Vision-language Alignment Analysis</li>
-		    <li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Multimodal Fusion and Embeddings</li>
-                <li><i class="ri-check-double-line"></i> Video-text Understanding and Retrieval </li>
-                <li><i class="ri-check-double-line"></i> Dialogue Multimodal Retreival </li>
-                <li><i class="ri-check-double-line"></i> Reliable Multimodal Retrieval</li>
-                <li><i class="ri-check-double-line"></i> Multimedia Retrieval Applications</li>
+                <li><i class="ri-check-double-line"></i> Image-text Multimodal Learning and Retrieval; such as</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Vision-language Alignment Analysis</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Multimodal Fusion and Embeddings</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Vision-language Pre-training</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Structured Vision-language Learning</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Commonsense-aware Vision-language Learning</li>
+		    
+                <li><i class="ri-check-double-line"></i> Video-text Understanding and Retrieval; such as </li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Video-text Retrieval</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Video (Corpus) Moment Retrieval</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Video Relation Detection</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Video Question Answering</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Video Dialogue</li>
+
+                <li><i class="ri-check-double-line"></i> Dialogue Multimodal Retreival; such as </li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Multimedia Pre-training in Dialogue</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Multimedia Search and Recommendation</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Multimodal Response Generation</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">User-centered Dialogue Retreival</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">New Applications on ChatGPT\&Visual-GPT and Beyond</li>
+
+                <li><i class="ri-check-double-line"></i> Reliable Multimodal Retrieval; such as</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Explainable Multimodal Retrieval</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Typical Failures of ChatGPT and other Large Models</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Adversarial Attack and Defense</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">New Evaluation Metrics</li>
+
+                <li><i class="ri-check-double-line"></i> Multimedia Retrieval Applications; such as</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Multimodal-based Reasoning</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Unapired Image Captioning</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Multimodal Information Extraction</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Multimodal Translation</li>
+		    -<li style="list-style-type: none;::before {content: '-'; margin-right: 5px;}">Opinion-oriented Multimodal Analysis for IR</li>
+
               </ul>
             <!-- <a href="#" class="btn-learn-more">Learn More</a> -->
           </div>
