--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
         </div>
 
         <!-- <h4>About Paper Submissions</h4> -->
-        <p>We welcome submissions of original work as <i>long</i> or <i>short</i> papers, as well as non-archival papers. We also accept paper submissions via <a href="https://aclrollingreview.org/">ARR</a>. All accepted papers will be presented at the workshop. </p>
-        <p><a href=""><i class="bi bi-award-fill text-danger" style="font-size: 1.5rem;"></i></a>We will  have the <b>Best Paper Award</b> and <b>Best Student Paper Award</b>, which will be announced during the workshop. </p>
+        <p>We welcome submissions of original work as <i>long</i> or <i>short</i> papers, as well as non-archival papers. We also accept paper submissions via <a href="">OpenReview</a>. All accepted papers will be presented at the workshop. </p>
         <br>
       
         <h4>Topics and Themes</h4>
