--- a/index.html
+++ b/index.html
@@ -191,17 +191,12 @@ In the context of IR, deep multimodal learning has shown the prominent potential
         </div>
 
         <!-- <h4>About Paper Submissions</h4> -->
-        <p>In this workshop, we welcome three types of submissions, all of which should relate to the topics and themes as listed in following: 
+        <p>In this workshop, we welcome three types of submissions: 
 	<ol>
-
 		<li> Position or perspective papers (up to 4 pages in length, plus unlimited pages for references): original ideas, perspectives, research vision, and open challenges in the area of evaluation approaches for explainable recommender systems;</li>
-
 		<li> Featured papers (title and abstract of the paper, plus the original paper): already published papers or papers summarizing existing publications in leading conferences and high-impact journals that are relevant for the topic of the workshop;</li>
-
 		<li> Demonstration papers (up to 2 pages in length, plus unlimited pages for references): original or already published prototypes and operational evaluation approaches in the area of explainable recommender systems.</li>
 	 </ol>
-
-
 	<p>Page limits include diagrams and appendices. </p>
 	<p>Submissions should be single-blind, written in English, and formatted according to the current ACM two-column conference format. </p>
 	<p>Suitable LaTeX, Word, and Overleaf templates are available from the ACM Website (use “sigconf” proceedings template for LaTeX and the Interim Template for Word). </p>
