--- a/index.html
+++ b/index.html
@@ -315,8 +315,9 @@ In the context of IR, deep multimodal learning has shown the prominent potential
           <p>Program</p>
           </div>
         <div>
-	  <p><a href="https://aclanthology.org/volumes/2023.mmir-1/"><b><u>PDF version of all the papers could be found here.</u></b></a></p>
-          <p>May 26, 2022 - Dublin local time (GMT+1)</p>
+		<p> TBA </p>
+<!-- 	  <p><a href="https://aclanthology.org/volumes/2023.mmir-1/"><b><u>PDF version of all the papers could be found here.</u></b></a></p>
+<!--           <p>May 26, 2022 - Dublin local time (GMT+1)</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item"> 09:00 - 09:05 | Opening Remark  </li>
             <li class="list-group-item"> 09:05 - 09:40 | Invited Talk I by <a href="https://sivareddy.in">Siva Reddy</a> - <em>How Grounded is Document-grounded Conversational AI?</em> <a href="https://youtu.be/0LkYoLGRXLE" target="_blank"><i class="bi bi-youtube text-danger large"></i></a></li>
@@ -335,9 +336,9 @@ In the context of IR, deep multimodal learning has shown the prominent potential
       Yan Xu, Etsuko Ishii, Samuel Cahyawijaya, Zihan Liu, Genta Indra Winata, Andrea Madotto, Dan SU, Pascale Fung
     </li>
   </ul>
-</li>
+</li> -->
 
-<li class="list-group-item"> 10:25 - 10:40 | Coffee Break </li>
+<!-- <li class="list-group-item"> 10:25 - 10:40 | Coffee Break </li>
 <li class="list-group-item"> 10:40 - 11:15 | Invited Talk II by <a href="http://www.dcs.gla.ac.uk/~jeff/">Jeff Dalton</a> - <em>Knowledge-Grounded Conversation Search and Understanding: Current Progress and Future Directions</em> <a href="https://youtu.be/WQ4KwL2Qf1A" target="_blank"><i class="bi bi-youtube text-danger large"></i></a>  </li>
 <li class="list-group-item"> 11:15 - 11:55 | Paper Lightning Talk
   <ol>
@@ -373,9 +374,9 @@ In the context of IR, deep multimodal learning has shown the prominent potential
       <em>G4: Grounding-guided Goal-oriented Dialogues Generation with Multiple Documents</em><br>
       Shiwei Zhang, Yiyang Du, Guanzhong Liu, Zhao Yan, Yunbo Cao
     </li>
-  </ol>
+  </ol> -->
 
-</li>
+<!-- </li>
 <li class="list-group-item"> 11:55 - 12:55 | Poster Session </li>
 <li class="list-group-item"> 12:55 - 14:00 | Lunch Break</li>
 <li class="list-group-item"> 14:00 - 14:35 | Invited Talk III by <a href="http://www.cs.columbia.edu/~zhouyu/">Zhou Yu</a> - <em>Will Big Models Solve Dialog Systems?</em> <a href="https://youtu.be/sgQeaJ0w5j8" target="_blank"><i class="bi bi-youtube text-danger large"></i></a></li>
@@ -405,8 +406,8 @@ Carl Strathearn, Dimitra Gkatzia
           </ul>
         </div>
       </div>
-    </section>
-
+    </section> -->
+ 
     <!-- End Program Section -->
 
 	  
