--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ In the context of IR, deep multimodal learning has shown the prominent potential
         <div>
 		<p> TBA </p>
 <!-- 	  <p><a href="https://aclanthology.org/volumes/2023.mmir-1/"><b><u>PDF version of all the papers could be found here.</u></b></a></p>
-<!--           <p>May 26, 2022 - Dublin local time (GMT+1)</p>
+	   <p>May 26, 2022 - Dublin local time (GMT+1)</p>
           <ul class="list-group list-group-flush">
             <li class="list-group-item"> 09:00 - 09:05 | Opening Remark  </li>
             <li class="list-group-item"> 09:05 - 09:40 | Invited Talk I by <a href="https://sivareddy.in">Siva Reddy</a> - <em>How Grounded is Document-grounded Conversational AI?</em> <a href="https://youtu.be/0LkYoLGRXLE" target="_blank"><i class="bi bi-youtube text-danger large"></i></a></li>
